Fix h2 whitespace issues, attempt 3

--- a/webpages/css/styles.css
+++ b/webpages/css/styles.css
@@ -117,7 +117,7 @@ h1 {
 
 .section-wrapper {
     width:80%;
-    margin: 20px auto 40px;
+    margin: 0 auto 40px;
     padding-top: 0;
     text-align:center;
 }
